--- a/frontpage/templates/profile.html
+++ b/frontpage/templates/profile.html
@@ -38,14 +38,8 @@
         <div>
     </div>
     <div class='row'>
-        <button class="btn waves-effect waves-light indigo accent-2" type="submit" name="Save">
-            Save 
-        </button>
-        {% if request.user.spotify_username == '' %}
-            <a href={% url 'get-auth-url'%} class='btn waves-effect disabled indigo accent-2'>Authorize Spotify</a>
-        {% else %}
-            <a href={% url 'get-auth-url' %} class='btn waves-effect indigo accent-2'>Authorize Spotify</a>
-        {% endif %}
+        <button class="btn waves-effect waves-light indigo accent-2" type="submit" name="Save">Save</button>
+        <button class="btn waves-effect waves-light indigo accent-2" onclick="authSpotify">Authroize Spotify</button>
     </div>
 </form>
         {% for message in messages %}
@@ -53,5 +47,15 @@
         {% endfor %}
     </div>
 </div>    
+
+<script>
+function authSpotify() {
+    fetch('/get-auth-url')
+        .then((response) => response.json())
+        .then((data) => {
+            window.location.replace(data.url);
+        });
+}
+</script>
 
 {% endblock %}
