--- a/frontpage/templates/dashboard.html
+++ b/frontpage/templates/dashboard.html
@@ -1,22 +1,32 @@
 {% extends 'base_generic.html' %}
 {% load static %}
+
 {% block content %}
+
 <div class='row'>
     <div class='col s12'>
-        <h1 class='center-align' style='color: #8c9eff;'>Hello, {{request.user}}!</h1>
+        <h1 class='center-align' style='color: white;'>Hello, {{request.user}}!</h1>
+        <div class='row'>
+            <div class='col s12 center'>
+                {% for message in messages %}
+                    <span class='helper-text white-text' data-success='right'><h4>{{message}}</h4></span>
+                {% endfor %}
+            </div>
+        </div>
     <div class='col s12 divider indigo accent-1'></div>
     </div>
 </div>
 
 <div class='row'>
-    <div class="col s4 center">
+
+    <div class="col s6 center">
         <div class="card grey darken-4">
             <div class='card-content white-text'>
-                <span class='card-title'><i class='medium material-icons' style='padding-top: 5px;'>person_outline</i></span>
-                <p>Add Bandcamp and Spotify usernames</p>
+                <span class='card-title'><i class='medium material-icons' style='padding-top: 5px;'>account_circle</i></span>
+                <p>Add Spotify and Bandcamp info</p>
             </div>
             <div class='card-action'>
-                {% if request.user.profile.bandcamp_username == None %}
+                {% if request.user.profile.bandcamp_username == None and request.user.profile.spotify_username == None %}
                     <a class="waves-effect waves-light btn pulse indigo accent-2" href={% url 'profile' %}>Edit Profile</a>
                 {% else %}
                     <a class="waves-effect waves-light btn indigo accent-2" href={% url 'profile' %}>Edit Profile</a>
@@ -24,14 +34,37 @@
             </div>
         </div>
     </div>
-    <div class="col s4 center">
+
+    <div class="col s6 center">
+        <div class="card grey darken-4">
+            <div class='card-content white-text'>
+                <span class='card-title'><i class='medium material-icons' style='padding-top: 5px;'>check</i></span>
+                <p>Authorize CurationStation to use Spotify</p>
+            </div>
+            <div class='card-action'>
+                {% if request.user.profile.spotify_username == None %}
+                    <button class="waves-effect waves-light btn disabled indigo accent-2" onclick="authSpotify()">Authorize</button>
+                {% elif not is_valid %}
+                    <button class="waves-effect waves-light btn pulse indigo accent-2" onclick="authSpotify()">Authorize</button>
+                {% else %}
+                    <button class="waves-effect waves-light btn indigo accent-2" onclick="authSpotify()">Authorize</button>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<div class='row'>
+
+    <div class="col s6 center">
         <div class='card grey darken-4'>
             <div class='card-content white-text'>
-                <span class='card-title'><img src="{% static 'imgs/Spotify_Icon_RGB_White.png' %}" style='max-width: 14.5%;'></span>
+                <span class='card-title'><img src="{% static 'imgs/Spotify_Icon_RGB_White.png' %}" style='max-width: 48px;'></span>
                 <p>Create a playlist of recent Bandcamp purchases</p>
             </div>
             <div class='card-action'>
-                {% if request.user.profile.bandcamp_username == None and request.user.profile.sp_playlist_name == None %}
+                {% if not is_valid or request.user.profile.bandcamp_username == None %}
                     <a class="waves-effect waves-light btn disabled indigo accent-2" href={% url 'make-playlist' %}>Make Playlist</a>
                 {% else %}
                     <a class="waves-effect waves-light btn indigo accent-2" href={% url 'make-playlist' %}>Make Playlist</a>
@@ -39,14 +72,15 @@
             </div>
         </div>
     </div>
-    <div class='col s4 center'>
+
+    <div class='col s6 center'>
         <div class='card grey darken-4'>
             <div class='card-content white-text'>
                 <span class='card-title'><i class='medium material-icons' style='padding-top: 5px;'>attach_money</i></span>
-                <p>Find artists on Bandcamp from your Spotify playlists</p>
+                <p>Buy music from artists on your Spotify playlists</p>
             </div>
             <div class='card-action'>
-                {% if request.user.profile.spotify_token == None %}
+                {% if not is_valid %}
                     <a class="waves-effect waves-light btn disabled indigo accent-2" href={% url 'buy-music' %}>Buy music</a>
                 {% else %}
                     <a class="waves-effect waves-light btn indigo accent-2" href={% url 'buy-music' %}>Buy Music</a>
@@ -55,38 +89,17 @@
         </div>
     </div>
 </div>
-<div class='row'>
-    <div class='col s6 center'>
-        <div class='card grey darken-4'>
-            <div class='card-content white-text'>
-                <span class='card-title'><i class='medium material-icons' style='padding-top: 5px;'>map</i></span>
-                <p>Make a map of Bandcamp artists near you</p>
-            </div>
-            <div class='card-action'>
-                <a class="waves-effect waves-light btn disabled indigo accent-2">Coming soon...</a>
-            </div>
-        </div>
-    </div>
-    <div class='col s6 center'>
-        <div class='card grey darken-4'>
-            <div class='card-content white-text'>
-                <span class='card-title'><i class='medium material-icons' style='padding-top: 5px;'>favorite</i></span>
-                <p>Make music friends in the forum</p>
-            </div>
-            <div class='card-action'>
-                <a class="waves-effect waves-light btn disabled indigo accent-2">Coming soon...</a>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class='col s12 divider indigo accent-1'></div>
-<div class='row'>
-    <div class='col s12'>
-        {% for message in messages %}
-            <span class='helper-text white' data-success='right'>{{message}}</span>
-        {% endfor %}
-    </div>
-</div>
+
+
+<script>
+function authSpotify() {
+    fetch('/get-auth-url')
+        .then((response) => response.json())
+        .then((data) => {
+            window.location.replace(data.url);
+        });
+}
+</script>
 
 {% endblock %}
