--- a/frontpage/templates/dashboard.html
+++ b/frontpage/templates/dashboard.html
@@ -97,7 +97,7 @@ function authSpotify() {
     fetch('/get-auth-url')
         .then((response) => response.json())
         .then((data) => {
-            window.location.replace(data.url);
+            window.open(data.url);
         });
 }
 </script>
