--- a/frontpage/templates/dashboard.html
+++ b/frontpage/templates/dashboard.html
@@ -30,9 +30,9 @@
                     </div>
                     <div class='card-action'>
                         {% if request.user.profile.location == None %}
-                            <a class="waves-effect waves-light btn disabled indigo accent-2" href={% url 'make-playlist' %}>Make Map</a>
+                            <a class="waves-effect waves-light btn disabled indigo accent-2" href={% url 'map' %}>Make Map</a>
                         {% else %}
-                            <a class="waves-effect waves-light btn indigo accent-2" href={% url 'make-playlist' %}>Make Map</a>
+                            <a class="waves-effect waves-light btn indigo accent-2" href={% url 'map' %}>Make Map</a>
                         {% endif %}
                     </div>
                 </div>
