fixed model save error

--- a/frontpage/templates/map.html
+++ b/frontpage/templates/map.html
@@ -16,7 +16,7 @@
 
   <nav style='background-color: black;'>
     <div class='nav-wraper'>
-      <ul id='nav-mobile' class='right hide-on-med-and-down'>
+      <ul id='nav-mobile' class='right'>
         <li style='padding-right: 25px;'>
           <a class='btn waves-effect indigo accent-2' href={% url 'dashboard' %}>
             Dashboard <i class='material-icons right'>exit_to_app</i>
