--- a/bandmapV2/static/css/styles.css
+++ b/bandmapV2/static/css/styles.css
@@ -24,11 +24,8 @@
 }
 
 .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
+    float: right;
     font-size: 36px;
-    margin-left: 50px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
