--- a/frontpage/templates/map.html
+++ b/frontpage/templates/map.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <nav style='background-color: black;'>
+  <nav id='topnav' style='background-color: black;'>
     <div class='nav-wraper'>
       <ul id='nav-mobile' class='right'>
         <li style='padding-right: 25px;'>
@@ -27,10 +27,7 @@
   </nav>
 
   <div id='sideFeats' class='sidebar'>
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ul id='artists' class='primary'>
-      
-    </div>
   </div>
 
   <div id='map-container'></div>
